--- a/Ansible/roles/jenkins/tasks/main.yml
+++ b/Ansible/roles/jenkins/tasks/main.yml
@@ -1,5 +1,17 @@
 ---
 
+- name: Install Java 8 using YUM.
+  yum:
+    name: "{{java.VERSION}}"
+    state: present
+  become: true
+
+- name: Correct the alternatives to change default Java version.
+  alternatives:
+    name: java
+    link: /bin/java
+    path: "{{java.ALTERNATIVES}}"
+
 - name: Download Jenkins repo yum URL for
   get_url:
     url: "{{jenkins.repo_URL}}"
