--- a/Ansible/requirements.yml
+++ b/Ansible/requirements.yml
@@ -1,5 +1,8 @@
 - src: geerlingguy.java
 
+- src: geerlingguy.docker
+- src: andrewrothstein.docker-compose
+
 - src: geerlingguy.jenkins
 
 - src: geerlingguy.postgresql
